style: fix copy icon alignment

--- a/app/components/body-content.module.css
+++ b/app/components/body-content.module.css
@@ -401,13 +401,13 @@
   text-align: center;
 }
 
-.contactCopyIconContainer {
+/* .contactCopyIconContainer {
   margin-top: 8px;
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
   align-items: center;
-  /* gap: 8px; */
+  gap: 8px; 
   cursor: pointer;
 }
 
@@ -419,11 +419,11 @@
   align-items: center;
   gap: 6px;
 
-  /* border: 1px solid transparent; 
+  border: 1px solid transparent; 
   border-color: #57435f;
   border-radius: 8px;
-  padding: 6px 8px; */
-}
+  padding: 6px 8px;
+} */
 
 /* .contactCopyText {
   font-family: var(--font-montserrat);
@@ -433,19 +433,19 @@
   display: none;
 } */
 
-.contactCopyIcon {
+/* .contactCopyIcon {
   width: 18px;
   height: auto;
   margin-top: -15px;
   margin-right: -15px;
   opacity: 0.7;
   display: none;
-}
+} */
 
-.contactEmailIcon {
+/* .contactEmailIcon {
   width: 120px;
   height: auto;
-}
+} */
 
 .footer {
   font-family: var(--font-agrandir);
@@ -542,12 +542,12 @@
 }
 
 @media (max-width: 501px) {
-  .contactEmailIcon {
+  /* .contactEmailIcon {
     width: 80px;
     height: auto;
-  }
+  } */
 
-  .contactCopyIconContainer {
+  /* .contactCopyIconContainer {
     justify-content: center;
   }
 
@@ -555,23 +555,25 @@
     border: 0px solid transparent; 
     border-radius: 0px;
     padding: 0px;
-  }
+  } */
 
-  .contactCopyText {
+  /* .contactCopyText {
     display: none;
   }
 
   .contactCopyIcon {
     display: none;
-  }
+  } */
 
   .contactCopyIconMobile {
-    display: inline;
+    display: flex;
+    align-items: center;
+    justify-content: center;;
     width: 22px;
     height: auto;
     /* opacity: 0.9; */
-    margin-top: 0px;
-    margin-right: 0px;
+    /* margin-top: 0px;
+    margin-right: 0px; */
   }
 
   /* .contactEmailContainer {
